# robotnik_interfaces

./: LICENSE  README.md
robotnik_actuators_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_actuators_msgs/action/: SetPtz.action
robotnik_actuators_msgs/msg/: Ptz.msg
robotnik_battery_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_battery_msgs/msg/: BatteryStatus.msg  BatteryStatusStamped.msg  DockingStationStatus.msg  DockingStationStatusStamped.msg  DockingStatus.msg  DockingStatusStamped.msg  InverterStatus.msg  InverterStatusStamped.msg
robotnik_command_manager_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_command_manager_msgs/action/: ExecuteCommand.action
robotnik_command_manager_msgs/msg/: CommandInfo.msg  CommandSpec.msg  Feedback.msg  Result.msg
robotnik_command_manager_msgs/srv/: CancelCommand.srv  ExecuteCommand.srv  ExecuteCommandAsync.srv  GetAvailableCommands.srv  GetFeedback.srv  GetRunningCommands.srv
robotnik_common_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_common_msgs/msg/: NodeState.msg
robotnik_common_msgs/srv/: SetBool.srv  SetFloat32.srv  SetFloat64.srv  SetInt32.srv  SetString.srv
robotnik_controller_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_controller_msgs/srv/: ChangeKinematics.srv  SetOdometry.srv
robotnik_controllers_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
robotnik_controllers_msgs/msg/: ControllerState.msg  DebugInfo.msg
robotnik_controllers_msgs/srv/: AvailableKinematics.srv  SetOdometry.srv
robotnik_docker_supervisor_interfaces/: CMakeLists.txt  package.xml
robotnik_docker_supervisor_interfaces/srv/: ComposeCommand.srv  ComposeLogs.srv  ComposeStatus.srv  ContainerCommand.srv  GetComposeList.srv
robotnik_docker_supervisor_msgs/: CMakeLists.txt  package.xml
robotnik_docker_supervisor_msgs/srv/: ComposeCommandAll.srv  ContainerCommand.srv  GetContainerList.srv  GetStackList.srv  GetStackStatus.srv  StartContainer.srv  StartModule.srv
robotnik_hardware_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_hardware_msgs/msg/: MotorStatus.msg  MotorStatusArray.msg
robotnik_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_io_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_io_msgs/msg/: ModbusExceptionCode.msg  ModbusFunctionCode.msg
robotnik_io_msgs/msgs/: NamedInputsOutputs.msg
robotnik_io_msgs/srv/: GetRegisters.srv  ModbusRead.srv  ModbusWrite.srv  SetAnalogOutput.srv  SetAnalogOutputArray.srv  SetDigitalOutput.srv  SetDigitalOutputArray.srv  SetRegisters.srv
robotnik_manipulation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_manipulation_msgs/action/: SendCommand.action
robotnik_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_navigation_msgs/action/: Charge.action  Dock.action  Move.action  Uncharge.action
robotnik_navigation_msgs/msg/: PoseStampedArray.msg
robotnik_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_perception_msgs/msg/: Detection.msg  DetectionArray.msg
robotnik_perception_msgs/srv/: GetURTransform.srv
robotnik_safety_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_safety_msgs/msg/: LaserStatus.msg  SafetyModeStatus.msg
robotnik_sensors_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_sensors_msgs/msg/: Axis.msg
robotnik_std_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_std_msgs/msg/: Pose2DStamped.msg
robotnik_supervisor_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robotnik_supervisor_msgs/srv/: GetModuleList.srv  GetStackList.srv  GetStackLogs.srv  GetStackStatus.srv  StartModule.srv  StopStack.srv
