<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robotnik_interfaces</name>
  <version>0.0.1</version>
  <description>robotnik_interfaces contains messages, services and actions that are used by the Robotnik stack.</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>

  <license>Apache License 2.0</license>

  <author email="mbosch@robotnik.es">Marc Bosch-Jorge</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotnik_navigation_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
