<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_navigation_msgs</name>
  <version>0.3.0</version>
  <description>Messages, service and action files for the Robotnik Navigation Stack</description>
  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>

  <license>Apache License 2.0</license>

  <author email="mbosch@robotnik.es">Marc Bosch-Jorge</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
